# FairDeveloperScore

./: .gitignore  .pre-commit-config.yaml  Acquire_GitHub_PR_DATA.py  CODING_STYLE_GUIDE.md  DATABASE_SETUP.md  LICENSE  README.md  README_OLD.md  Sample_TC_Result.py  db.sqlite3  docker-compose.yml  linux_commits.csv  linux_pull_requests.csv  manage.py  microsoft_vscode_commit_only.csv  pyproject.toml  requirements.txt  streamlit_app.py  test_torque_with_developer_profile.py  top_500_repos.txt
code/: AcquireGitHubCommitData.py  Acquire_GitHub_PR_DATA.py  EDA_for_developer_file.py  Get_Github_Most_N_REPO.py  convert_commitdata_to_agg.py  pr_feature_data_for_repo.py
data/: Kevin_project_commits_data.csv  kafka_bugs_improvements.csv  kafka_collection_summary.json  kafka_field_validation.json  kafka_recent_issues.csv  kafka_sample_sample_status_history.csv  kafka_status_history.csv
data/Commit_PR_data/: huggingface_transformers_commit_with_pr_stats_2.csv  pallets_flask_commit_with_pr_stats_2.csv  tensorflow_tensorflow_commit_with_pr_stats.csv  torvalds_linux_commit_with_pr_stats_2.csv  vercel_next.js_commit_with_pr_stats_2.csv
data/commit_data/: 521xueweihan_HelloGitHub_commits.csv  996icu_996.ICU_commits.csv  AUTOMATIC1111_stable-diffusion-webui_commits.csv  Chalarangelo_30-seconds-of-code_commits.csv  CyC2018_CS-Notes_commits.csv  EbookFoundation_free-programming-books_commits.csv  Genymobile_scrcpy_commits.csv  Significant-Gravitas_AutoGPT_commits.csv  Snailclimb_JavaGuide_commits.csv  TheAlgorithms_Python_commits.csv  airbnb_javascript_commits.csv  avelino_awesome-go_commits.csv  facebook_react-native_commits.csv  (+34 more)
dev_productivity/: admin.py  asgi.py  models.py  settings.py  urls.py  views.py  wsgi.py
docs/: Docs.md  torque_clustering.py
fds_webapp/: README.md  comprehensive_test.py  db.sqlite3  debug_fds_issue.py  final_working_test.py  local_fds_analyzer.py  manage.py  requirements.txt  run_bulk_analyses.py  run_django_pipeline_cli.py  test_column_fix.py  test_delete_feature.py  test_fds_fix.py  test_fixes.py  test_time_window_fix.py  test_timestamp_fix.py  test_webapp_e2e.py
modules/: Get_Github_Most_N_REPO.py  Sample_TC_Result.py  run_torque_on_kevin.py
templates/: analytics.html  base.html  batch_detail.html  batch_list.html  commit_detail.html  dashboard.html  developer_detail.html  developer_list.html  index.html  metrics.html  projects.html
test/: run_torque_on_kevin.py  sample_tc_result.py
torque_on_Kevin_commits/: Kevin_project_commits_clustered.csv  clustering_summary.txt
torque_output/: developer_clusters_sorted.csv  torque_output_developer_clusters.csv
utils/: custom_torque_clustering.py
(+245 files in other folders)
